--- a/index.html
+++ b/index.html
@@ -589,8 +589,8 @@
             English
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item text-dark" href="#">English</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Other Language</a></li>
+            <li><a class="dropdown-item" style="color= #000" href="#">English</a></li>
+            <li><a class="dropdown-item"  style="color= #000" href="#">Other Language</a></li>
           </ul>
         </div>
       </div>
